css/global.css
/*
===================================
===================================
Global styles

- The is the file for CSS that applies to the entire site.
- Variables, resets, global styles, etc. should be added here.
- This file should be linked to every page on the site.
- We can also add global component styles here (buttons, forms, etc.)
===================================
===================================
*/

/* 
===================================
Resets (box-sizing, normalize, etc.) 
===================================
*/

* {
	box-sizing: border-box;
}

/* 
===================================
Variables (colors, text, spacing, etc.)
===================================
*/

:root {
	/* Color Definitions */
	--color-white: #fff;
	--color-amaranth: #b91515;
	--color-teal: #007a80;
	--color-cybergrape: #6c4681;
	--color-onyx: #1f1d1d;
	--color-yaleblue: #184f85;
	--color-hotpink: #fa6cb7;
	--color-citrine: #d3c53f;
	--color-citron: #92a32d;
	--color-copper: #b37122;
	--color-bluepurple: linear-gradient(180deg, #6c4681 -5.71%, #184f85 103.44%);
	--color-yellowgreen: linear-gradient(
		180deg,
		#d3c53f 0%,
		#d3c53f 26.04%,
		#92a32d 58.85%,
		#b37122 100%
	);

	/* Color Assignment */
	--body-background-color: var(--color-white);
	--button1-color: var(--color-white);
	--button1-hover-border: var(--color-white);
	--button2-color: var(--color-amaranth);
	--button2-hover: var(--color-white);
	--button3-color: var(--color-amaranth);
	--button3-hover-border: var(--color-amaranth);

	/* Text */
	--headings-text: "Josefin Sans", sans-serif;
	--body-text: "Josefin Sans", sans-serif;
	--button-text: "Josefin Sans", sans-serif;

	--font-weight-regular: 400;
	--font-weight-medium: 500;
	--font-weight-bold: 700;

	--font16: 1rem;
	--font21: 1.313rem;
	--font24: 1.5rem;
	--font28: 1.75rem;
	--font36: 2.25rem;
	--font46: 2.875rem;
	--font56: 3.5rem;

	/* Line Height */
	--line-height20: 1.25rem;
	--line-height26: 1.625rem;
	--line-height28: 1.75rem;
	--line-height32: 2rem;
	--line-height40: 2.5rem;
	--line-height50: 3.125rem;
	--line-height58: 3.625rem;

	/* Spacing */
	--spacing10: 10px;
	--spacing20: 20px;
	--spacing40: 40px;
	--spacing65: 65px;
	--spacing80: 80px;
	--spacing84: 84px;
	--spacing100: 100px;
	--spacing164: 164px;
	--spacing185: 185px;
	--spacing213: 213px;

	--spacing-footer: 50px 160px;
	--spacing-header-button: 125px 279px;

	/* Wrappers */
	--desktop-wrapper-width: 90%;
	--mobile-wrapper-width: 95%;
	
	/* Media Queries */
}

/* 
===================================
Global Styles (html, body, text, links, etc.)
===================================
*/

html {
	font-size: 16px;
}

body {
	background-color: var(--body-background-color);
}

/* Images */
img {
	max-width: 100%;
}

/* Text */
/* Text */
h1 {
	font-size: var(--font56);
	font-weight: var(--font-weight-bold);
	line-height: var(--line-height58);
	color: var(--color-white);
}

h2 {
	font-size: var(--font46);
	font-weight: var(--font-weight-bold);
	line-height: var(--line-height50);
	color: var(--color-onyx);
}

h3 {
	font-size: var(--font36);
	font-weight: var(--font-weight-bold);
	line-height: var(--line-height40);
	color: var(--color-white);
}

h4 {
	font-size: var(--font28);
	font-weight: var(--font-weight-bold);
	line-height: var(--line-height32);
	color: var(--color-white);
}

h5 {
	font-size: var(--font24);
	font-weight: var(--font-weight-medium);
	line-height: var(--line-height28);
	color: var(--color-onyx);
}

p {
	font-size: var(--font16);
	font-weight: var(--font-weight-regular);
	line-height: var(--line-height20);
	color: var(--color-white);
}

.body1 {
	font-size: var(--font21);
	font-weight: var(--font-weight-regular);
	line-height: var(--line-height26);
	color: var(--color-onyx);
}


/* Links */
a {
	color: var(--color-white);
	text-decoration: none;
}
/* Lists */
footer li {
	list-style-type: none;
	/* need variable for line height */
	line-height: var(--line-height32);
	text-align: center;
}
footer ul {
	padding-left: 0px;
	padding-inline-start: 0px;
}

/* a {
	color: #FFFFFF;
} */

/* Forms */

/* 
===================================
Wrappers (container, flexbox, etc.)
===================================
*/

/* Container */

/* Wrappers */
.wrapper {
	width: var(--mobile-wrapper-width);
	margin: 0 auto;
}

/* 
===================================
Global Component Styles (buttons, forms, etc.)
===================================
*/

/* Buttons */
.button2 {
	border-radius: 10px;
	background-color: var(--button2-color);
	padding: 10px 40px;
	color: var(--color-white);
	border: none;
	min-width: 187px;
	min-height: 50px;
	margin: 20px;
	font-weight: var(--font-weight-bold);
	font-size: var(--font21);
}
/* Forms */

/* FOOTER STYLES */
footer {
	background-color: var(--color-onyx);
	color: var(--color-white)
}
/* MODAL */
.hidden {
	display: none;
}
.modal {
	height: 95vh;
	width: 90%;
	margin: 0 auto;
	padding: 26px;
	position: fixed;
	left: 0;
	right: 0;
	top: 2vh;
	background-color: var(--body-background-color);
	color: var(--color-onyx);
	border: 1px solid var(--body-background-color);
	border-radius: 4px;
	z-index: 2;
	
}

.modal-wrapper {
	position: relative;
}
.btn-close {
	position: absolute;
	right: 0;
	top: -20px;
}
.btn-close button {
	border: none;
	background-color: transparent;
}
.btn-close svg {
	width: 32px;
	height: 32px;
}

.overlay-la {
	position: fixed;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	width: 100%;
	height: 100%;
	background: rgba(0, 0, 0, 0.5);
	backdrop-filter: blur(3px);
	z-index: 1;
}

.btn-la {
	background-color: transparent;
	color: var(--color-white);
	border: none;
	margin: 30px 0;
	/* align-items: center; */
	font-size: var(--font21);
}

/* FORM Styles */
.footer-main {
	padding: 40px;
}

.footer-main,
.footer-logo-btn {
	display: flex;
	flex-direction: column;
	align-items: center;
}

form {
	text-align: center;
}
.text-input {
	display: flex;
	flex-direction: column;
	align-items: center;
}
.text-input input {
	height: 50px;
	/* is the width ok? */
	min-width: 320px;
	border-radius: 10px;
	border: none;
}
#newsletter-input {
	/* does this need a variable for spacing?? */
padding-left: 24px;
}

/* bottom links */
.bottom-links {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
}

.social-svgs {
	display: flex;
	flex-direction: row;
	column-gap: 20px;
}



/* 
===================================
Media Queries (overriding styles for different screen sizes)
Feel free to change the min/max-width values to whatever you need. Use variables.
===================================
*/

/* Tablet & Larger */
@media (min-width: 1024px) {
.footer-main {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	/* gap: 100px; */
	/* text-align: left; */
}
.footer-main h4 {
	font-size: var(--font36);
	font-weight: var(--font-weight-bold);
	line-height: 0px;
	color: var(--color-white);
}
.footer-main p {
	margin: 0px;
}
footer li {
	text-align: left;
}
.text-input {
	display: flex;
	flex-direction: row;
	align-items: center;
}
form {
	display: flex;
	flex-direction: column;
	text-align: left;
}
}

/* Tablet Only */
@media (min-width: 768px) and (min-width: 1024px) {
}

/* Phone Only */
@media (min-width: 480px) {
}

